--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam.csproj
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam.csproj
@@ -191,6 +191,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="images\14169649_10208771751363196_1238687849_n.png" />
+    <Content Include="images\rrrrr.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
