--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam.csproj
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Posts\Details.cshtml" />
     <Content Include="Views\Posts\Edit.cshtml" />
     <Content Include="Views\Posts\Index.cshtml" />
+    <Content Include="Views\Home\MySongs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
