--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam.csproj
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
