--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam.csproj
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam.csproj
@@ -193,6 +193,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="images\14169649_10208771751363196_1238687849_n.png" />
+    <Content Include="images\BackGroundImage.jpg" />
     <Content Include="images\BSE_guitar-01.png" />
     <Content Include="images\BSE_guitar-05.png" />
     <Content Include="images\rrrrr.jpg" />
